Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/Website_Visit_Lead_Assignment__c.object-meta.xml
<CustomObject>
    <label>Website Visit Lead Assignment</label>
    <nameField>
        <displayFormat>WVLA-{0}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Visit Lead Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>