Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Lead__r.Company</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>