Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <formula>Website_Visit__r.Landing_Page__c</formula>
    <label>Landing Page</label>
    <type>Text</type>
</CustomField>