Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Website Visit Lead Assignments</relationshipLabel>
    <relationshipName>Website_Visit_Lead_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>