Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <formula>Lead__r.CreatedDate</formula>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>