Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <formula>Lead__r.Title</formula>
    <label>Lead Title</label>
    <type>Text</type>
</CustomField>