Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/LeadCaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>LeadCaseSafeId__c</fullName>
    <formula>Lead__r.LeadCaseSafeID__c</formula>
    <label>LeadCaseSafeId</label>
    <type>Text</type>
</CustomField>