Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/No_of_Pages_Viewed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pages_Viewed__c</fullName>
    <formula>Website_Visit__r.No_of_Pages_Viewed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Pages Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>