Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>IF( Lead__r.Owned_by_Queue__c = TRUE,  Lead__r.Owner:Queue.QueueName ,  Lead__r.Owner:User.Full_Name__c )</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>