Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <formula>TEXT(Lead__r.Primary_Source__c)</formula>
    <label>Primary Source</label>
    <type>Text</type>
</CustomField>