Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <formula>Text(Lead__r.Secondary_Source__c)</formula>
    <label>Secondary Source</label>
    <type>Text</type>
</CustomField>