Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Visit_Start__c.field-meta.xml
<CustomField>
    <fullName>Visit_Start__c</fullName>
    <formula>Website_Visit__r.Visit_Start__c</formula>
    <label>Visit Start</label>
    <type>DateTime</type>
</CustomField>