Agentforce/force-app/main/default/objects/Website_Visit_Lead_Assignment__c/fields/Website_Visit__c.field-meta.xml
<CustomField>
    <fullName>Website_Visit__c</fullName>
    <label>Website Visit</label>
    <referenceTo>Website_Visit__c</referenceTo>
    <relationshipLabel>Website Visit Lead Assignments</relationshipLabel>
    <relationshipName>Website_Visit_Lead_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>